--- a/readme
+++ b/readme
@@ -1,1 +1,23 @@
 
+# MasternodeSetup
+
+### Required:
+
+1. MNsavings for Collateral 
+
+2. Download Local Wallet for your operating system: : https://github.com/mnsccoin/src/releases
+
+
+3. You will need also VPS with Ubuntu 16.04 or 18.04 or 20.04
+
+**VPS WALLET:**
+
+To install mnsc Masternode use the following command:
+
+`bash <( curl -sL https://raw.githubusercontent.com/mnsccoin/src/master/masternode-install.sh)
+
+- Enjoy
+
+check your masternode status using `mnsavings-cli getmasternodestatus` after run it from local wallet
+
+If you still facing any issues then join our <a href="https://discord.gg/PW77729pAq">Discord server</a> for support, We available for support you.
