--- a/readme
+++ b/readme
@@ -1,102 +1,220 @@
-# MasternodeSetup
+<h1>MNSAVINGS COIN repository</h1>
+<p>  Goal of MNSC: 
+we want to backup the mnsc-coin with other masternode coins! <p>
+<p>
 
-### Required:
+(You can buy MNSC from exchange for collateral) <br>
+***•https://trade.birake.com/market/BIRAKE.MNSC_BIRAKE.BTC ***
+***•https://ihostmn.com/sharemn.php?id=220 ***
+***•https://xeggex.com/market/MNSC_USDT  ***
+***•https://xeggex.com/market/MNSC_BTC  ***
 
-1. MNsavings for Collateral 
-
-2. Download Local Wallet for your operating system: : https://github.com/mnsccoin/src/releases
-
-3. You will need also VPS with Ubuntu 18.04
-
-**VPS WALLET:**
-
-1. After you longin on your VPS , with this command you will download masternode-installer.   
-`wget https://raw.githubusercontent.com/mnsccoin/src/master/masternode-install.sh`  
- 
-
-2. With this command you will make masternode-install.sh executable:  
-
-- Use this: <br>
-`sudo chmod +x masternode-install.sh` <br>
-
-3. Now install your masternode.  
-`./masternode-install.sh`
-
-
-
-
-**LOCAL WALLET:**
-
-Send the collateral
-Open your wallet and wait until your wallet has downloaded the blockchain.
-
-Go to “Tools”.
-Click “Debug console”.
-This is the console where you will execute all commands.
-
-Create a new masternode private key.
-
-```
-createmasternodekey
-```
-
-Example output
-
-7VatfYVk5fFMTymPDhgSURAESDACJhWpd89WHGoh35d9fbLQPj5
-
-Show your collateral address.
-```
-getaccountaddress "MN1"
-```
-
-Example output
-
-MDC99hZmSmYEcBu4WcxA2TCT6KBqHB6Hos
-```
-Transfer the required amount of coins to the “collateral address” that you created using the command “getaccountaddress "MN1"”.
-```
-Wait until the transaction has the required masternode confirmations.
-
-Go to “Tools”.
-Click “Debug console”.
-Enter the following command.
-```
-getmasternodeoutputs
-```
-```
-Example output
-
-
-[
-  {
-    "txhash": "506a242ccbfd2555bcd9cff5f4041752c911f39cb2905acc83ccfe0cf8808df9",
-    "outputidx": 1
-  }
-]
-```
-
-Modify the following line in your masternode.conf file and paste it into:
-```
-MN1 VPSIP:22878 7VatfYVk5fFMTymPDhgSURAESDACJhWpd89WHGoh35d9fbLQPj5 506a242ccbfd2555bcd9cff5f4041752c911f39cb2905acc83ccfe0cf8808df9 1
-```
-MN1 - Alias for your masternode.
-
-VPSIP- External IP address of your VPS.
-
-5727 - The port for MNSC
-
-7VatfYVk5fFMTymPDhgSURAESDACJhWpd89WHGoh35d9fbLQPj5 - Masternode private key from the command “createmasternodekey”.
-
-506a242ccbfd2555bcd9cff5f4041752c911f39cb2905acc83ccfe0cf8808df9 - Value “txhash” from the command “getmasternodeoutputs”.
-
-1 - Value “outputidx” from the command “getmasternodeoutputs”.
-
-
-Save the file and close.
-
-Close your wallet.
-
-Restart your wallet! 
-On Masternode tab in your wallet - Start the masternode! 
-
-If you still facing any issues then join our <a href="https://discord.gg/PW77729pAq"> Discord server</a> for support, We available for support you.
+<br> More information at: www.mnsaving.com <br>
+  
+  
+<h2><strong>Specification:</strong></h2>
+<table>
+<tbody>
+<tr>
+<td>Coin Name & Ticker</td>
+<td>MNSAVINGS [MNSC]</td>
+</tr>
+<tr>
+<td>Coin Type</td>
+<td>POS + Masternodes</td>
+</tr>
+<tr>
+<td>Block Time</td>
+<td>60 Sec</td>
+</tr>
+<tr>
+<td>Maximum Supply</td>
+<td>160 000 000 PIGGIE</td>
+</tr>
+<tr>
+<td>Minimum Stake Age</td>
+<td>1 Hour</td>
+</tr>
+<tr>
+<td>Rewardstructure</td>
+<td>80 % Masternode Rewards & 20 % Staking Rewards</td>
+</tr>
+<tr>
+<td>Coin Maturity</td>
+<td>30+1 Block</td>
+</tr>
+<tr>
+<td>Port</td>
+<td>5727</td>
+</tr>
+<tr>
+<td>RPC Port</td>
+<td>5726</td>
+</tr>
+</tbody>
+<br>
+<h2><strong>POS Rewards Distribution:</strong></h2>
+<table border="0" width="600" cellspacing="2" cellpadding="2"><colgroup><col width="26" /><col width="106" /><col width="98" /><col width="126" /><col width="130" /><col width="118" /></colgroup>
+<tbody>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;"><strong>Block Start</strong></td>
+<td class="xl65" style="width: 120px; text-align: center;"><strong>Block End</strong></td>
+<td class="xl65" style="width: 180px; text-align: center;"><strong>Masternode Collateral</strong></td>
+<td class="xl65" style="width: 120px; text-align: center;"><strong>Block Reward</strong></td>
+<td class="xl65" style="width: 120px; text-align: center;"><strong>MN Reward</strong></td>
+<td class="xl66" style="width: 120px; text-align: center;"><strong>POS Reward</strong></td>
+</tr>
+  <tr>
+<td class="xl65" style="width: 120px; text-align: center;">0</td>
+<td class="xl65" style="width: 120px; text-align: center;">0</td>
+<td class="xl65" style="width: 180px; text-align: center;">0</td>
+<td class="xl65" style="width: 120px; text-align: center;">110000</td>
+<td class="xl65" style="width: 120px; text-align: center;">0</td>
+<td class="xl66" style="width: 120px; text-align: center;">0</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">1</td>
+<td class="xl65" style="width: 120px; text-align: center;">250</td>
+<td class="xl65" style="width: 180px; text-align: center;">0</td>
+<td class="xl65" style="width: 120px; text-align: center;">10</td>
+<td class="xl65" style="width: 120px; text-align: center;">0</td>
+<td class="xl66" style="width: 120px; text-align: center;">10</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">251</td>
+<td class="xl65" style="width: 120px; text-align: center;">100000</td>
+<td class="xl65" style="width: 180px; text-align: center;">1000</td>
+<td class="xl65" style="width: 120px; text-align: center;">10</td>
+<td class="xl65" style="width: 120px; text-align: center;">7</td>
+<td class="xl65" style="width: 120px; text-align: center;">3</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">100001</td>
+<td class="xl65" style="width: 120px; text-align: center;">125000</td>
+<td class="xl65" style="width: 180px; text-align: center;">1000</td>
+<td class="xl65" style="width: 120px; text-align: center;">25</td>
+<td class="xl65" style="width: 120px; text-align: center;">20</td>
+<td class="xl66" style="width: 120px; text-align: center;">5</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">125001</td>
+<td class="xl65" style="width: 120px; text-align: center;">150000</td>
+<td class="xl65" style="width: 180px; text-align: center;">2500</td>
+<td class="xl65" style="width: 120px; text-align: center;">25</td>
+<td class="xl65" style="width: 120px; text-align: center;">20</td>
+<td class="xl66" style="width: 120px; text-align: center;">5</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">150001</td>
+<td class="xl65" style="width: 120px; text-align: center;">200000</td>
+<td class="xl65" style="width: 180px; text-align: center;">3500</td>
+<td class="xl65" style="width: 120px; text-align: center;">30</td>
+<td class="xl65" style="width: 120px; text-align: center;">24</td>
+<td class="xl66" style="width: 120px; text-align: center;">6</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">200001</td>
+<td class="xl65" style="width: 120px; text-align: center;">250000</td>
+<td class="xl65" style="width: 180px; text-align: center;">5000</td>
+<td class="xl65" style="width: 120px; text-align: center;">40</td>
+<td class="xl65" style="width: 120px; text-align: center;">32</td>
+<td class="xl66" style="width: 120px; text-align: center;">8</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">250001</td>
+<td class="xl65" style="width: 120px; text-align: center;">300000</td>
+<td class="xl65" style="width: 180px; text-align: center;">7500</td>
+<td class="xl65" style="width: 120px; text-align: center;">42.5</td>
+<td class="xl65" style="width: 120px; text-align: center;">34</td>
+<td class="xl66" style="width: 120px; text-align: center;">8.5</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">300001</td>
+<td class="xl65" style="width: 120px; text-align: center;">350000</td>
+<td class="xl65" style="width: 180px; text-align: center;">10000</td>
+<td class="xl65" style="width: 120px; text-align: center;">45</td>
+<td class="xl65" style="width: 120px; text-align: center;">36</td>
+<td class="xl66" style="width: 120px; text-align: center;">9</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">350001</td>
+<td class="xl65" style="width: 120px; text-align: center;">400000</td>
+<td class="xl65" style="width: 180px; text-align: center;">12500</td>
+<td class="xl65" style="width: 120px; text-align: center;">50</td>
+<td class="xl65" style="width: 120px; text-align: center;">40</td>
+<td class="xl66" style="width: 120px; text-align: center;">10</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">400001</td>
+<td class="xl65" style="width: 120px; text-align: center;">550000</td>
+<td class="xl65" style="width: 180px; text-align: center;">15000</td>
+<td class="xl65" style="width: 120px; text-align: center;">55</td>
+<td class="xl65" style="width: 120px; text-align: center;">44</td>
+<td class="xl66" style="width: 120px; text-align: center;">11</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">550001</td>
+<td class="xl65" style="width: 120px; text-align: center;">650000</td>
+<td class="xl65" style="width: 180px; text-align: center;">20000</td>
+<td class="xl65" style="width: 120px; text-align: center;">50</td>
+<td class="xl65" style="width: 120px; text-align: center;">40</td>
+<td class="xl66" style="width: 120px; text-align: center;">11</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">650001</td>
+<td class="xl65" style="width: 120px; text-align: center;">750000</td>
+<td class="xl65" style="width: 180px; text-align: center;">25000</td>
+<td class="xl65" style="width: 120px; text-align: center;">45</td>
+<td class="xl65" style="width: 120px; text-align: center;">36</td>
+<td class="xl66" style="width: 120px; text-align: center;">9</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">750001</td>
+<td class="xl65" style="width: 120px; text-align: center;">1000000</td>
+<td class="xl65" style="width: 180px; text-align: center;">30000</td>
+<td class="xl65" style="width: 120px; text-align: center;">50</td>
+<td class="xl65" style="width: 120px; text-align: center;">40</td>
+<td class="xl66" style="width: 120px; text-align: center;">10</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">1000001</td>
+<td class="xl65" style="width: 120px; text-align: center;">1250000</td>
+<td class="xl65" style="width: 180px; text-align: center;">40000</td>
+<td class="xl65" style="width: 120px; text-align: center;">45</td>
+<td class="xl65" style="width: 120px; text-align: center;">36</td>
+<td class="xl66" style="width: 120px; text-align: center;">9</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">1250001</td>
+<td class="xl65" style="width: 120px; text-align: center;">1500000</td>
+<td class="xl65" style="width: 180px; text-align: center;">60000</td>
+<td class="xl65" style="width: 120px; text-align: center;">40</td>
+<td class="xl65" style="width: 120px; text-align: center;">32</td>
+<td class="xl66" style="width: 120px; text-align: center;">8</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">1500001</td>
+<td class="xl65" style="width: 120px; text-align: center;">1850000</td>
+<td class="xl65" style="width: 180px; text-align: center;">80000</td>
+<td class="xl65" style="width: 120px; text-align: center;">30</td>
+<td class="xl65" style="width: 120px; text-align: center;">24</td>
+<td class="xl66" style="width: 120px; text-align: center;">6</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">1850001</td>
+<td class="xl65" style="width: 120px; text-align: center;">2500000</td>
+<td class="xl65" style="width: 180px; text-align: center;">100000</td>
+<td class="xl65" style="width: 120px; text-align: center;">25</td>
+<td class="xl65" style="width: 120px; text-align: center;">20</td>
+<td class="xl66" style="width: 120px; text-align: center;">5</td>
+</tr>
+<tr>
+<td class="xl65" style="width: 120px; text-align: center;">2500001</td>
+<td class="xl65" style="width: 120px; text-align: center;">6000000</td>
+<td class="xl65" style="width: 180px; text-align: center;">125000</td>
+<td class="xl65" style="width: 120px; text-align: center;">20</td>
+<td class="xl65" style="width: 120px; text-align: center;">16</td>
+<td class="xl66" style="width: 120px; text-align: center;">4</td>
+</tr>
+</tbody>
+</table>
